--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "~4.15.2",
     "mongoose": "^4.11.10",
     "morgan": "~1.8.1",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
     "serve-favicon": "~2.4.2"
   }
 }
